# DiningReviewRestaurant

./: render.yaml
aaa/: .pdm-python  db.sqlite3
aaa/DiningReviewRestaurant/: db.sqlite3  settings.py
aaa/reviews/migrations/: 0001_initial.py
back-end/: .env.example  .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
back-end/DiningReviewRestaurant/: settings.py
back-end/DiningReviewRestaurant/DiningReviewRestaurant/: asgi.py  urls.py  wsgi.py
back-end/DiningReviewRestaurant/reviews/: models.py  serializers.py  urls.py  views.py
back-end/DiningReviewRestaurant/reviews/migrations/: 0002_review_restaurant.py
back-end/core/: settings.py  urls.py
back-end/reviews/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
back-end/reviews/migrations/: 0001_initial.py  0002_remove_review_restaurant_remove_review_user_reviewer_and_more.py  0003_alter_review_reviewer.py
front-end/DiningReviewRestaurant/: index.html  package-lock.json  package.json  vite.config.js
front-end/DiningReviewRestaurant/src/: App.vue  axios.js  router.js
front-end/DiningReviewRestaurant/src/components/: Login.vue  Register.vue  ReviewList.vue
front-end/dining-review-restaurant/: README.md  index.html  package-lock.json  package.json
front-end/dining-review-restaurant/src/: App.vue
front-end/dining-review-restaurant/src/components/: Login.vue  ReviewList.vue
front-end/dining-review-restaurant/src/router/: index.js
front-end/dining-review-restaurant/src/store/: store.js
